cmake_minimum_required(VERSION 3.10.0)

project(Homework CXX)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
include(cmake/StandardProjectSettings.cmake)
include(cmake/Catch.cmake)
# Link this 'library' to set the c++ standard / compile-time options requested
add_library(default INTERFACE)
target_compile_features(default INTERFACE cxx_std_17)

include(cmake/CompilerWarnings.cmake)
set_project_warnings(default)

enable_testing()
add_subdirectory(external/catch2)
if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    add_subdirectory(tree)
    add_subdirectory(tree-iterator)
    add_subdirectory(random-access-iterator)
    add_subdirectory(pqueue)
    add_subdirectory(words)
    add_subdirectory(isogram)
endif()
