cmake_minimum_required(VERSION 3.10.0)
project(WORDS CXX)
add_executable(words_test words.cpp words_test.cpp)
target_link_libraries(words_test PUBLIC Catch2::Catch2 default)
add_executable(words_cli words.cpp words_main.cpp)
target_link_libraries(words_cli PUBLIC default)
catch_discover_tests(words_test TEST_PREFIX words::)
